--- a/Mine/Mine/Views/AboutPage.xaml
+++ b/Mine/Mine/Views/AboutPage.xaml
@@ -36,7 +36,7 @@
             <StackLayout Orientation="Vertical" Padding="16,40,16,40" Spacing="10">
                 <Label Text="CPSC 5250 WQ21"></Label>
                 <Label Text="Jara Lindsay"></Label>
-                <Label Text="1/17/2021 - 11:14 Now"></Label>
+                <Label Text="1/23/2021 2:20pm"></Label>
             </StackLayout>
         </ScrollView>
     </Grid>
